docs-archive/apache-airflow-providers-google/21.2.0/_sources/_api/airflow/providers/google/cloud/hooks/compute_ssh/index.rst.txt
airflow.providers.google.cloud.hooks.compute_ssh
================================================

.. py:module:: airflow.providers.google.cloud.hooks.compute_ssh


Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.hooks.compute_ssh.CMD_TIMEOUT


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.hooks.compute_ssh.ComputeEngineSSHHook


Module Contents
---------------

.. py:data:: CMD_TIMEOUT
   :value: 10


.. py:class:: ComputeEngineSSHHook(gcp_conn_id = 'google_cloud_default', instance_name = None, zone = None, user = 'root', project_id = PROVIDE_PROJECT_ID, hostname = None, use_internal_ip = False, use_iap_tunnel = False, use_oslogin = True, expire_time = 300, cmd_timeout = NOTSET, max_retries = 10, impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.ssh.hooks.ssh.SSHHook`


   Hook to connect to a remote instance in compute engine.

   This hook supports two SSH key-management flows:

   * Cloud OS Login when ``use_oslogin=True``
   * instance metadata SSH keys when ``use_oslogin=False``

   In Trusted Partner Cloud (TPC) environments, the recommended setup is to use instance metadata SSH keys:

   * ``use_oslogin=False`` and ``use_iap_tunnel=False`` for direct SSH
   * ``use_oslogin=False`` and ``use_iap_tunnel=True`` for SSH over IAP

   In a tested TPC environment, the OS Login SSH flow was not available for this hook. Since this hook uses
   OS Login SSH-key management when ``use_oslogin=True``, that setting should be avoided there unless the
   target environment explicitly supports OS Login SSH.

   :param instance_name: The name of the Compute Engine instance
   :param zone: The zone of the Compute Engine instance
   :param user: The name of the user on which the login attempt will be made
   :param project_id: The project ID of the remote instance
   :param gcp_conn_id: The connection id to use when fetching connection info
   :param hostname: The hostname of the target instance. If it is not passed, it will be detected
       automatically.
   :param use_iap_tunnel: Whether to connect through IAP tunnel. In TPC environments this can work with
       metadata-managed SSH keys, but it requires the IAM permissions needed to open an IAP tunnel. In
       Google Cloud deployments, this is typically the ``IAP-secured Tunnel User`` role
       (``roles/iap.tunnelResourceAccessor``).
   :param use_internal_ip: Whether to connect using internal IP
   :param use_oslogin: Whether to manage keys using OsLogin API. If false,
       keys are managed using instance metadata. In tested TPC environments, set this to ``False`` and use
       metadata-managed SSH keys instead.
   :param expire_time: The maximum amount of time in seconds before the private key expires
   :param gcp_conn_id: The connection id to use when fetching connection information
   :param max_retries: Maximum number of retries the process will try to establish connection to instance.
       Could be decreased/increased by user based on the amount of parallel SSH connections to the instance.
   :param impersonation_chain: Optional. The service account email to impersonate using short-term
       credentials. The provided service account must grant the originating account
       the Service Account Token Creator IAM role and have the sufficient rights to perform the request


   .. py:attribute:: conn_name_attr
      :value: 'gcp_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'google_cloud_ssh_default'



   .. py:attribute:: conn_type
      :value: 'gcpssh'



   .. py:attribute:: hook_name
      :value: 'Google Cloud SSH'



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom UI field behaviour for SSH connection.



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: instance_name
      :value: None



   .. py:attribute:: zone
      :value: None



   .. py:attribute:: user
      :value: 'root'



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: hostname
      :value: None



   .. py:attribute:: use_internal_ip
      :value: False



   .. py:attribute:: use_iap_tunnel
      :value: False



   .. py:attribute:: use_oslogin
      :value: True



   .. py:attribute:: expire_time
      :value: 300



   .. py:attribute:: cmd_timeout


   .. py:attribute:: max_retries
      :value: 10



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: get_conn()

      Return SSH connection.



